[gd_scene load_steps=7 format=3 uid="uid://bowtntv6odvur"]

[ext_resource type="Texture2D" uid="uid://cmwdti2axtr1n" path="res://assets/images/imagen_carretera.jpg" id="1_7euuu"]
[ext_resource type="Script" path="res://scenes/menus/main_menu.gd" id="1_w1s5n"]
[ext_resource type="FontFile" uid="uid://b6jsuvuoukvnu" path="res://assets/fonts/UpheavalPro.otf" id="2_6knlb"]
[ext_resource type="Theme" uid="uid://d260eulstv1lx" path="res://themes/espaciado_vertical_botones.tres" id="3_aqkfb"]
[ext_resource type="Theme" uid="uid://4qo0twsnpsbc" path="res://themes/botones_menu.tres" id="4_fyvji"]

[sub_resource type="LabelSettings" id="LabelSettings_bmkln"]
font = ExtResource("2_6knlb")
font_size = 150

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_w1s5n")

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("1_7euuu")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -399.5
offset_top = -119.0
offset_right = 399.5
offset_bottom = 119.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
size_flags_stretch_ratio = 0.0
alignment = 1

[node name="Titulo" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "GAME TRIP"
label_settings = SubResource("LabelSettings_bmkln")
horizontal_alignment = 1

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_left = 150
theme_override_constants/margin_top = 50
theme_override_constants/margin_right = 150

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer/MarginContainer"]
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/VBoxContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
theme = ExtResource("3_aqkfb")
theme_override_constants/margin_top = 5
theme_override_constants/margin_bottom = 15

[node name="ButtonStart" type="Button" parent="MarginContainer/VBoxContainer/MarginContainer/VBoxContainer/MarginContainer"]
unique_name_in_owner = true
layout_mode = 2
theme = ExtResource("4_fyvji")
text = "Start"

[node name="MarginContainer2" type="MarginContainer" parent="MarginContainer/VBoxContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
theme = ExtResource("3_aqkfb")
theme_override_constants/margin_top = 20
theme_override_constants/margin_bottom = 20

[node name="ButtonSettings" type="Button" parent="MarginContainer/VBoxContainer/MarginContainer/VBoxContainer/MarginContainer2"]
unique_name_in_owner = true
layout_mode = 2
theme = ExtResource("4_fyvji")
text = "Settings"

[node name="MarginContainer3" type="MarginContainer" parent="MarginContainer/VBoxContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
theme = ExtResource("3_aqkfb")
theme_override_constants/margin_top = 20
theme_override_constants/margin_bottom = 20

[node name="ButtonExit" type="Button" parent="MarginContainer/VBoxContainer/MarginContainer/VBoxContainer/MarginContainer3"]
unique_name_in_owner = true
layout_mode = 2
theme = ExtResource("4_fyvji")
text = "Exit"

[connection signal="pressed" from="MarginContainer/VBoxContainer/MarginContainer/VBoxContainer/MarginContainer/ButtonStart" to="." method="_on_button_start_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/MarginContainer/VBoxContainer/MarginContainer2/ButtonSettings" to="." method="_on_button_settings_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/MarginContainer/VBoxContainer/MarginContainer3/ButtonExit" to="." method="_on_button_exit_pressed"]
